--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
         }
     },
     "require": {
-        "php": "^8.1",
-        "laravel/framework": "^11.0",
+        "php": "^8.3",
+        "laravel/framework": "^v12.3.0",
         "guzzlehttp/guzzle": "^7.4"
     },
     "minimum-stability": "dev",
